[package]
name = "project-vagabond"
version = "0.1.0"
authors = ["Trevor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ggez = "0.5.1"

[[bin]]
name = "basic-client"
path = "basic-client/src/main.rs"

[[bin]]
name = "client"
path = "vagabond-client/src/main.rs"

[[bin]]
name = "server"
path = "vagabond-server/src/main.rs"
