[package]
name = "project-vagabond"
version = "0.1.0"
authors = ["Trevor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
cgmath = {version= "0.17", features=["mint"]}
serde_json = "1.0"
ggez = "0.5.1"

# Initial testing for communicating with the server
[[bin]]
name = "basic-client"
path = "basic-client/src/main.rs"

# Actual game client for playing
[[bin]]
name = "client"
path = "vagabond-client/src/main.rs"

# Server for handling connections from players and running the match
[[bin]]
name = "server"
path = "vagabond-server/src/main.rs"

[[example]]
name = "fs"
path = "file-system-check/main.rs"
