[package]
name = "project-vagabond"
version = "0.1.0"
authors = ["Trevor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
cgmath = {version= "0.17", features=["mint"]}
serde_json = "1.0"
bincode = "1.3.1"
ggez = "0.5.1"

# Initial testing for communicating with the server
[[bin]]
name = "basic-client"
path = "basic_client/main.rs"

# Actual game client for playing
[[bin]]
name = "client"
path = "vagabond_client/main.rs"

# Server for handling connections from players and running the match
[[bin]]
name = "server"
path = "vagabond_server/main.rs"