[package]
name = "vagabond-server"
version = "0.1.0"
authors = ["Trevor Crow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full", "io-util"] }
serde_json = "1.0"
futures = "0.1"
websocket = "0.22.0"